--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --dir src"
   },
   "dependencies": {
     "next": "12.0.10",
@@ -17,6 +17,8 @@
     "@types/react": "17.0.39",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.6.1",
     "typescript": "4.5.5"
   }
 }
