--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["next/core-web-vitals", "prettier"]
+  "extends": ["next/core-web-vitals", "prettier", "plugin:tailwindcss/recommended"],
+  "plugins": ["tailwindcss"],
+  // tailwind.config.js などの config ファイル、ESLint の対象外にする
+  "ignorePatterns": ["*.config.js"]
 }
