--- a/app/package.json
+++ b/app/package.json
@@ -15,10 +15,14 @@
   "devDependencies": {
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-tailwindcss": "^3.5.0",
+    "postcss": "^8.4.12",
     "prettier": "^2.6.1",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
   }
 }
