--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -1,5 +1,12 @@
 {
-  "extends": ["next/core-web-vitals", "prettier", "plugin:tailwindcss/recommended"],
+  "extends": [
+    "next",
+    "next/core-web-vitals",
+    "prettier",
+    "next/babel",
+    "eslint:recommended",
+    "plugin:tailwindcss/recommended"
+  ],
   "plugins": ["tailwindcss"],
   // tailwind.config.js などの config ファイル、ESLint の対象外にする
   "ignorePatterns": ["*.config.js"]
