--- a/app/package.json
+++ b/app/package.json
@@ -8,10 +8,10 @@
     "lint": "next lint --dir src"
   },
   "dependencies": {
-    "next": "12.0.10",
+    "next": "^12.1.6",
     "node-fetch": "^3.2.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.17",
