--- a/app/package.json
+++ b/app/package.json
@@ -8,10 +8,14 @@
     "lint": "next lint --dir src"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.2",
+    "axios": "^0.27.2",
     "next": "^12.1.6",
     "node-fetch": "^3.2.3",
+    "nookies": "^2.5.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.33.1"
   },
   "devDependencies": {
     "@types/node": "17.0.17",
