CHEERVOTE（支持投票機能）の実装

--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "TZ='Asia/Tokyo' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --dir src"
