--- a/app/package.json
+++ b/app/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.2",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
+    "chartjs-plugin-datalabels": "^2.1.0",
     "next": "^12.1.6",
     "node-fetch": "^3.2.3",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1"
   },
