--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -1,14 +1,5 @@
 {
-  "extends": [
-    "next",
-    "next/core-web-vitals",
-    "prettier",
-    "next/babel",
-    "eslint:recommended",
-    "plugin:tailwindcss/recommended"
-  ],
-  "plugins": ["tailwindcss"],
+  "extends": ["next", "next/core-web-vitals", "prettier", "next/babel", "eslint:recommended"],
   // tailwind.config.js などの config ファイル、ESLint の対象外にする
   "ignorePatterns": ["*.config.js"]
-  }
 }
