--- a/app/package.json
+++ b/app/package.json
@@ -8,11 +8,12 @@
     "lint": "next lint --dir src"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "chartjs-plugin-datalabels": "^2.1.0",
-    "next": "^12.1.6",
+    "next": "12.3.4",
     "node-fetch": "^3.2.3",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
@@ -23,14 +24,10 @@
   "devDependencies": {
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
-    "autoprefixer": "^10.4.4",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-tailwindcss": "^3.5.0",
-    "postcss": "^8.4.12",
     "prettier": "^2.6.1",
-    "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
   }
 }
